--- a/package.json
+++ b/package.json
@@ -1,5 +1,10 @@
 {
   "name": "time-time-workshop",
+  "author": {
+    "name": "Alvin Ashiatey",
+    "email": "mail@alvinashiatey.com",
+    "url": "https://www.alvinashiatey.com"
+  },
   "private": true,
   "version": "0.0.1",
   "main": "./dist/time-time-workshop.cjs",
@@ -12,10 +17,15 @@
   },
   "scripts": {
     "dev": "vite --host",
-    "format:scripts": "prettier . --write",
-    "format": "npm run format:scripts",
     "build": "tsc && vite build && dts-bundle-generator --config ./dts-bundle-generator.config.ts",
-    "test": "jest --runInBand"
+    "test": "jest --runInBand",
+    "test:coverage": "jest --runInBand --coverage",
+    "lint:scripts": "eslint . --ext .ts",
+    "lint:styles": "stylelint ./**/*.{css,scss}",
+    "format:scripts": "prettier . --write",
+    "format:styles": "stylelint ./**/*.{css,scss} --fix",
+    "format": "npm run format:scripts && npm run format:styles",
+    "prepare": "husky install && husky add .husky/pre-commit 'npx lint-staged' && git add .husky/pre-commit"
   },
   "devDependencies": {
     "@types/jest": "^29.1.1",
@@ -27,7 +37,13 @@
     "eslint": "^8.24.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-prettier": "^4.2.1",
+    "husky": "^8.0.1",
+    "lint-staged": "^13.0.3",
     "prettier": "^2.7.1",
+    "sass": "^1.55.0",
+    "stylelint": "^14.13.0",
+    "stylelint-config-recommended": "^9.0.0",
+    "stylelint-config-sass-guidelines": "^9.0.1",
     "ts-jest": "^29.0.3",
     "ts-node": "^10.9.1",
     "typescript": "^4.6.4",
