--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
   "version": "0.0.1",
   "main": "./dist/time-time-workshop.cjs",
   "module": "./dist/time-time-workshop.mjs",
-  "unpkg": "./dist/time-time-workshop.mjs",
-  "jsdelivr": "./dist/time-time-workshop.mjs",
+  "unpkg": "./dist/time-time-workshop.umd.js",
+  "jsdelivr": "./dist/time-time-workshop.umd.js",
   "exports": {
     ".": {
       "require": "./dist/time-time-workshop.cjs",
